--- a/relatorio.html
+++ b/relatorio.html
@@ -11,13 +11,87 @@
     <div class="card-container">
         <div class="card">
             <div class="card-header">
-                <h2 class="title">Titulo</h2>
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
             </div>
             <div class="card-data">
                 <p>Luca Poe de Almeida</p>
                 <p>lucaspoe@gmail.com</p>
-                <p></p>
-                <p>aaaaa</p>
+            </div>
+            <div class="card-action">
+                <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
+                <button class="btn-action" id="btn-delete"><i class="uil uil-trash-alt"></i></button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
+            </div>
+            <div class="card-data">
+                <p>Luca Poe de Almeida</p>
+                <p>lucaspoe@gmail.com</p>
+            </div>
+            <div class="card-action">
+                <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
+                <button class="btn-action" id="btn-delete"><i class="uil uil-trash-alt"></i></button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
+            </div>
+            <div class="card-data">
+                <p>Luca Poe de Almeida</p>
+                <p>lucaspoe@gmail.com</p>
+            </div>
+            <div class="card-action">
+                <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
+                <button class="btn-action" id="btn-delete"><i class="uil uil-trash-alt"></i></button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
+            </div>
+            <div class="card-data">
+                <p>Luca Poe de Almeida</p>
+                <p>lucaspoe@gmail.com</p>
+            </div>
+            <div class="card-action">
+                <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
+                <button class="btn-action" id="btn-delete"><i class="uil uil-trash-alt"></i></button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
+            </div>
+            <div class="card-data">
+                <p>Luca Poe de Almeida</p>
+                <p>lucaspoe@gmail.com</p>
+            </div>
+            <div class="card-action">
+                <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
+                <button class="btn-action" id="btn-delete"><i class="uil uil-trash-alt"></i></button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>Registro</h2>
+                <h2 id="cd">01</h2>
+            </div>
+            <div class="card-data">
+                <p>Luca Poe de Almeida</p>
+                <p>lucaspoe@gmail.com</p>
             </div>
             <div class="card-action">
                 <button class="btn-action" id="btn-edit"><i class="uil uil-edit-alt"></i></button>
